# zarara

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: acyclic_output_fuzz.yml  napi-publish.yml
napi/: .gitignore  .npmignore  Cargo.toml  README.md  package.json
napi/examples/: generate.mjs
napi/npm/darwin-arm64/: package.json
napi/npm/darwin-x64/: package.json
napi/npm/linux-arm64-gnu/: package.json
napi/npm/linux-x64-gnu/: package.json
napi/npm/win32-x64-msvc/: package.json
napi/src/: lib.rs
scripts/: bootstrap-placeholders.mjs  bump-version.mjs
